fix birds wobbling on mobile

--- a/src/app/components/blocks/birds/bar-chart.module.css
+++ b/src/app/components/blocks/birds/bar-chart.module.css
@@ -165,7 +165,7 @@
     background-color: rgba(255, 255, 255, 0.9);
     border-radius: 3px;
     box-shadow: 1px 2px 4px 1px #808080;
-    display: none;
+    visibility: hidden;
     pointer-events: none;
     font-family: Inter;
     letter-spacing: 0.4px;
